--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -83,11 +83,8 @@
             // Set navbar selected
             $(".challenges-link").addClass("navbar-selected");
 
-
             // Script for challenge filtering
-            $('#filter-form').submit(function (e) {
-                e.preventDefault();
-
+            $('#filter-form').on("change", function (e) {
                 const selectedCategory = $('[name="category"]').val();
                 const selectedDifficulty = $('[name="difficulty"]').val();
                 const showSolved = $('[name="solved"]').prop('checked');
@@ -125,7 +122,7 @@
         <p><span id="visible-count">{{ unsolved_count }}</span> / {{ challenges|length }} challenge(s) visible</p>
 
         <!-- Challenge filtering form -->
-        <form id="filter-form">
+        <form id="filter-form" action="javascript:void(0);">
             <select name="category">
                 <option value="">All Categories</option>
                 <option value="web">web</option>
