Prevent sidebar from shortening
This commit prevents the sidebar from shortening when there are only a
few challenges visible, such that the list is lower than the viewport.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -200,7 +200,7 @@ body {
     /* Andrew god */
     position: sticky;
     top:0;
-    max-height: 100vh;
+    min-height: 100vh;
 }
 
 #flag-section h2 {
