--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -200,7 +200,7 @@ body {
     /* Andrew god */
     position: sticky;
     top:0;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 #flag-section h2 {
