Move user greeting to top of sidebar
This commit moves the user greeting and points display to the top of the
sidebar, reflecting an improved hierarchy of elements. The margin
between headings has also been tweaked.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -205,6 +205,7 @@ body {
 
 #flag-section h2 {
     font-size: 22px;
+    margin-top: 0.5em;
 }
 
 /* Rules */
@@ -223,7 +224,7 @@ body {
 
 #filter-form {
     /* Centering the form */
-    margin: 0 auto 0.5em;
+    margin: 0 auto;
 }
 
 #filter-form select {
