Remove unnecessary inline style

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -115,7 +115,7 @@
 
     </script>
 </head>
-<body style="background-color: #121212;">
+<body>
 {% include 'navbar.html' %}
 
 <main id="challenge-main">
