--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -246,6 +246,8 @@ body {
     border-left: 5px solid #7329c4; /* Stylish left border */
 }
 
+
+/* Solved challenges styling */
 #challenge-list .challenge[data-solved] {
     border-color: #339900;
 }
@@ -254,6 +256,9 @@ body {
     color: darkgrey;
 }
 
+#challenge-list .challenge[data-solved] h2::after {
+    content: ' (Solved)';
+}
 
 
 /* Home page */
