--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -1,3 +1,6 @@
+:root {
+    --user-highlight: #004225;
+}
 /* Enable scrolling again */
 body, html {
     overflow: auto;
@@ -6,7 +9,7 @@ body, html {
 
 /* Styling links */
 a {
-    color: #4fa8f6;
+    color: var(--link-color);
     text-decoration: none;
 }
 
@@ -29,7 +32,7 @@ h2 {
 /* Individual panels */
 .dashboard-panel {
     width: 45%;
-    background-color: #1e1e1e;
+    background-color: var(--light-bg-color);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -47,15 +50,15 @@ table {
 th, td {
     text-align: left;
     padding: 8px;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid var(--form-field-border-color);
 }
 
 thead {
-    background-color: #333;
+    background-color: var(--form-field-border-color);
 }
 
 tbody tr:hover {
-    background-color: #1a1a1a;
+    background-color: var(--hover-color);
 }
 
 /* Re-enable page scroll */
@@ -66,7 +69,7 @@ html, body {
 
 /* Current user is highlighted */
 #current-user {
-    background-color: #004225;
+    background-color: var(--user-highlight);
 }
 
 tr#current-user td#username-data::after {
