--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -13,15 +13,15 @@ table {
 th, td {
     text-align: left;
     padding: 8px;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid var(--form-field-border-color);
 }
 
 thead {
-    background-color: #333;
+    background-color: var(--form-field-border-color);
 }
 
 tbody tr:hover {
-    background-color: #1a1a1a;
+    background-color: var(--hover-color);
 }
 
 .container {
@@ -44,5 +44,5 @@ tbody tr:hover {
 }
 
 #username-heading {
-    color: #964ae2; /* Theme color */
+    color: var(--purple-1);
 }
