Add steganography to list of categories.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -138,6 +138,7 @@
                 <option value="pwn">pwn</option>
                 <option value="rev">rev</option>
                 <option value="osint">osint</option>
+                <option value="steg">osint</option>
                 <option value="misc">misc</option>
             </select>
             <select name="difficulty">
