Fixed challenges.html not working with the new features with a hack. Also updated challenges.html to use the new difficulty name, and fixed a typo in the 'steg' challenge category selector.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -138,12 +138,12 @@
                 <option value="pwn">pwn</option>
                 <option value="rev">rev</option>
                 <option value="osint">osint</option>
-                <option value="steg">osint</option>
+                <option value="steg">steg</option>
                 <option value="misc">misc</option>
             </select>
             <select name="difficulty">
                 <option value="">All Difficulties</option>
-                <option value="free">free</option>
+                <option value="free points">free points</option>
                 <option value="easy">easy</option>
                 <option value="medium">medium</option>
                 <option value="hard">hard</option>
