Replace `overflow-y: scroll;` with `auto`
This commit fixes an issue where Chromium-based web browsers will show persistent scrollbars on the leaderboard tables, even when scrolling is not necessary.

--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -37,7 +37,7 @@ h2 {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     height: 600px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 /* Table styling */
