Secret loader, uid refactor, and made RESET_DATA a flask config variable. - Refactored User.uid to User.id for clarity. - Secrets are no longer a hardcoded string - The program will create a secret.txt when run for the first time, and will read from that file on preceding runtimes. - RESET_DATA was refactored to be a flask config variable instead of being placed in constants.py

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
                 <li><a class="signup-link" href="/register">Sign Up</a></li>
             {% else %}
                 <li><a class="logout-link" href="/logout">Logout</a></li>
-                <li><a class="profile-link" href="/profile/{{ user.uid }}">Profile</a></li>
+                <li><a class="profile-link" href="/profile/{{ user.id }}">Profile</a></li>
             {% endif %}
         </ul>
     </nav>
