Redirect all downloads to the challenge folder
As all challenge files are stored in one location, this avoids
duplicating potentially large files on disk, and instead natively routes
/downloads/* to the respective challenge folder. Note that this route
*does* support files within folders, but the file metadata generator in
challenges.py *does not* recursively walk the directory to add these.

--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -189,7 +189,7 @@
                     <div class="files">
                         <ul>
                             {% for file in challenge.files %}
-                                <li><a href="{{ file.url }}" download="{{ file.name }}">{{ file.name }}</a></li>
+                                <li><a href="downloads/{{ challenge.id }}/{{ file }}" download="{{ file }}">{{ file }}</a></li>
 
                             {% endfor %}
                         </ul>
