--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -19,7 +19,7 @@
 
 /* General styles for links in the navbar */
 #main-nav ul li a {
-    color: white;
+    color: inherit;
     text-decoration: none;
     font-weight: bold;
 }
