Add filtering links to challenge cards
Users can now click on a challenge's category or difficulty, which will
filter their visible challenges as selected. If the user clicks on a
filtering link when already filtered with that option, the filter will
revert to "All".

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -74,7 +74,11 @@ body {
     text-align: end;
 }
 
-.difficulty {
+.category-link, .difficulty-link {
+    text-decoration: none;
+}
+
+.difficulty-link {
     float: left;
 }
 
