--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -196,11 +196,11 @@
                     </div>
                 {% endif %}
 
-                {% if challenge.port %}
+                {% if challenge.container %}
                     <!-- Challenge Links-->
                     <div class = "files">
                         <ul>
-                            <li><a href="{{ url_for(request.endpoint, _external=True).split(':')[0] }}:{{ url_for(request.endpoint, _external=True).split(':')[1] }}:{{ challenge.port }}">Link</a></li>
+                            <li><a href="{{ challenge.container.url }}">Link</a></li>
                         </ul>
                     </div>
                 {% endif %}
