Make filter links tags instead.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -72,19 +72,28 @@ body {
 }
 
 .challenge .info-block {
-    text-align: end;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    padding: 0 5px 5px;
+}
+
+.points {
+    margin-left: 5px;
 }
 
 /* Tags */
 .category-link, .difficulty-link {
+
     text-decoration: none;
     background-color: #080808;
     color: var(--fg-color);
-    padding: 5px 15px;
+    padding: 6px 16px; /* For text */
+    transition: background-color 0.3s;
     border-radius: 10px;
-    transition: background-color 0.3s; /* Smooth transition for hover effect */
     display: inline-block;
-    margin-left: 5px;
+    margin-right: 10px;
     margin-bottom: 8px;
     margin-top: 8px;
     font-size: 0.85em;
