--- a/challenges/church_of_jowett/container/src/templates/flag.html
+++ b/challenges/church_of_jowett/container/src/templates/flag.html
@@ -29,18 +29,22 @@
     </style>
 
     <div class="top">
-        <h4 style="margin-bottom:20px">Assignment marks for ;):</h4>
+        <h4 style="margin-bottom:20px">Revelations for Cardinals:</h4>
         <table class="table">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">Subject</th>
-                    <th scope="col">Grade</th>
+                    <th scope="col">Revelation</th>
+                    <th scope="col">Content</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Flag</td>
                     <td>{{ flag }}</td>
+                </tr>
+                <tr>
+                    <td>SCSA</td>
+                    <td>SCSA does their job properly, and the comp sci curse is well put together</td>
                 </tr>
             </tbody>
         </table>
