--- a/challenges/church_of_jowett/container/src/templates/signup.html
+++ b/challenges/church_of_jowett/container/src/templates/signup.html
@@ -41,18 +41,18 @@
     <div class="text-center">
         <form class="form-login" method="post">
             <fieldset>
-                <legend style="margin-bottom: 20px">Create a new account to view grades:</legend>
+                <legend style="margin-bottom: 20px">Create a new account to join the church:</legend>
 
                 <div class="form-group">
-                    <label for="Username" class="spacing">Enter your student number:</label>
-                    <input type="text" class="form-control" id="stu_num" name="stu_num" placeHolder="Username"
+                    <label for="Username" class="spacing">Enter your Name:</label>
+                    <input type="text" class="form-control" id="name" name="name" placeHolder="Name"
 
                            required autofocus>
                 </div>
 
                 <div class="form-group">
-                    <label for="Email" class="spacing">Confirm your student email:</label>
-                    <input type="email" class="form-control" id="stu_email" name="stu_email" placeHolder="Email" required
+                    <label for="Email" class="spacing">Enter your Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" placeHolder="Email" required
 
                            autofocus>
                 </div>
